[Bluetooth][WinRT] Track device name changes

This change adds support for tracking device name changes in the WinRT
Bluetooth Low Energy backend. This is done in two ways:

* When advertisement packets are received for a known device the "local
  name" is updated if previous advertisements did not provide one.

* BluetoothDeviceWinrt subscribes to the NameChanged event on the
  IBluetoothLEDevice. This tracks name changes once a connection is
  established.

Bug: 902241
Change-Id: I489fc1b7fb86da3c28fde1ec4459d0c736f27326
Reviewed-on: https://chromium-review.googlesource.com/c/1328222
Reviewed-by: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Commit-Queue: Reilly Grant <reillyg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608686}